<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/launchSearchActivity"
        android:enabled="true"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_search_recalls"
        android:visible="true"/>
    
    <item
        android:id="@+id/launchHomeActivity"
        android:enabled="true"
        android:orderInCategory="20"
        android:title="@string/action_recent_recalls"
        android:visible="true"/>
    
    <item
        android:id="@+id/launchSubmitActivity"
        android:orderInCategory="30"
        android:showAsAction="never"
        android:title="@string/action_subit_recall"/>
    
    <item
        android:id="@+id/launchWatchlistActivity"
        android:orderInCategory="40"
        android:showAsAction="never"
        android:title="@string/action_watchlist"/>

</menu>
