<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:weightSum="5"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvPrname"
        android:layout_width="fill_parent"
        android:layout_margin="5dp"
        android:layout_height="0dp"
        android:padding="5dp"
        android:background="@android:color/white"
        android:textSize="20sp"
        android:layout_weight="2"
        android:text="@string/set_in_code" />
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="3"
	    android:background="@android:color/darker_gray"
	    android:padding="20dp"
	    android:orientation="vertical" >
    
	    <TextView
	        android:id="@+id/tvManufacturer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/tvManufacturer" />
	
	    <Button
	        android:id="@+id/btManufacturer"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="30dp"
	        android:layout_marginBottom="10dp"
	        android:text="@string/set_in_code" />
	
	    <TextView
	        android:id="@+id/tvType"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/tvType" />
	
	    <Button
	        android:id="@+id/btType"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="30dp"
	        android:layout_marginBottom="10dp"
	        android:text="@string/set_in_code" />
	
	    <TextView
	        android:id="@+id/tvRecallURL"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:text="@string/tvRecallURL" />
	
	    <Button
	        android:id="@+id/btRecallURL"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="30dp"
	        android:text="@string/btRecallURL" />
    
	</LinearLayout>
	
</LinearLayout>
